# dome_lights

./: CMakeLists.txt  Passthrough.vertexshader  README.md  SimpleVertexShader.vertexshader  WobblyTexture.fragmentshader  camera.cpp  camera.hpp  led_cluster.cpp  led_cluster.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_viewer.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
models/: untitled.blend  untitled.blend1
patterns/: blades.glsl  blob_neon.glsl  clouds.glsl  dual_spiral.glsl  fire.glsl  hole3_sphere_shape.glsl  lightning.glsl  oil_smooth.glsl  pinwheel.glsl  puls.glsl  quads.glsl  tiles.glsl  voronoi_aura.glsl
pixelpusher/: CMakeLists.txt  Utilities.h  device_header.cpp  device_header.h  pixel.cpp  pixel.h  pixel_pusher.cpp  pixel_pusher.h  pixel_pusher.hpp  pixel_pusher_sender.cpp  strip.cpp  strip.h
shaders/: cnoise.glsl  fire.glsl  model_loading.frag  model_loading.vs  pattern.frag  puls.glsl
